--- a/motcroise/client/src/index.html
+++ b/motcroise/client/src/index.html
@@ -10,6 +10,9 @@
       margin: 0;
       padding: 0;
     }
+    * {
+      box-sizing: border-box;
+    }
   </style>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
